# Knox

./: .gitignore  Cargo.toml  Justfile  LICENSE  README.md
.cursor/: 00-vision.md  01-language-spec.md  02-type-system.md  03-memory-model.md  04-targets.md  05-compiler-architecture.md  06-package-manager.md  07-cli.md  08-editor-tools.md  09-roadmap.md
.github/workflows/: ci.yml
crates/knox_cli/: Cargo.toml
crates/knox_cli/src/: main.rs
crates/knox_codegen_wasm/: Cargo.toml
crates/knox_codegen_wasm/src/: lib.rs
crates/knox_compiler/: Cargo.toml
crates/knox_compiler/src/: desugar.rs  ir.rs  lexer.rs  lib.rs  modules.rs  parser.rs  typecheck.rs
crates/knox_pkg/: Cargo.toml
crates/knox_pkg/src/: lib.rs  lockfile.rs  manifest.rs
crates/knox_runtime/: Cargo.toml
crates/knox_runtime/src/: lib.rs
crates/knox_syntax/: Cargo.toml
crates/knox_syntax/src/: accessors.rs  ast.rs  diagnostics.rs  ir.rs  lib.rs  span.rs  token.rs
docs/: compiler-architecture.md  error-handling.md  getting-started.md  introduction.md  language-basics.md  modules-and-imports.md  package-manager.md  structs-and-accessors.md  targets.md  type-system.md
examples/accessors_generic/: knox.toml
examples/accessors_generic/src/: main.kx  product.kx
examples/borrowing/: knox.toml
examples/borrowing/src/: main.kx
examples/get_set/: knox.toml
examples/hello_world/: hello.kx
examples/import_demo/: README.md  knox.toml
examples/match/: knox.toml
examples/transfer_parse/: transfer_parse.kx
examples/vars_ops/: knox.toml
tools/vscode-knox/: README.md  package.json
(+11 files in other folders)
